# CRA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ReadMe.txt  _default_localizer_8h_source.html  _lazy_localizer_8h_source.html  _link_8h_source.html  _linked_camera_8h_source.html  _linked_camera_debugger_8h_source.html  _linked_camera_implementation_8h_source.html  _linked_object_8h_source.html  _localizer_8h_source.html  _registration_8h_source.html  _tool_8h_source.html  _tool_by_port_8h_source.html  _transformation_8h_source.html  _virtual_element_8h_source.html  annotated.html  class_c_r_a_1_1_default_localizer-members.html  class_c_r_a_1_1_default_localizer.html  class_c_r_a_1_1_default_localizer__coll__graph.map  class_c_r_a_1_1_default_localizer__inherit__graph.md5  class_c_r_a_1_1_lazy_localizer-members.html  class_c_r_a_1_1_lazy_localizer.html  class_c_r_a_1_1_lazy_localizer__coll__graph.md5  class_c_r_a_1_1_lazy_localizer__inherit__graph.map  class_c_r_a_1_1_lazy_localizer__inherit__graph.md5  class_c_r_a_1_1_link-members.html  class_c_r_a_1_1_link.html  class_c_r_a_1_1_link__coll__graph.map  class_c_r_a_1_1_link__coll__graph.md5  class_c_r_a_1_1_linked_camera-members.html  class_c_r_a_1_1_linked_camera.html  class_c_r_a_1_1_linked_camera__coll__graph.map  class_c_r_a_1_1_linked_camera__inherit__graph.md5  class_c_r_a_1_1_linked_camera_debugger-members.html  class_c_r_a_1_1_linked_camera_debugger.html  class_c_r_a_1_1_linked_camera_debugger__inherit__graph.map  (+55 more)
include/CRA/: DefaultLocalizer.h  LazyLocalizer.h  Link.h  LinkedCamera.h  LinkedCameraDebugger.h  LinkedCameraImplementation.h  LinkedObject.h  Localizer.h  Registration.h  Tool.h  ToolByPort.h  Transformation.h  VirtualElement.h  cra_global.h
misc/: FindCRA.cmake.in  configure.cmake.in
misc/CMake-Modules/: FindCameraCalibration.cmake  FindLocalizerDLL.cmake  FindMathBib.cmake
misc/MediTEC/: CMakeLists.txt  FindCRA.cmake.in  configure.cmake.in
search/: all_61.html  all_64.html  all_66.html  all_69.html  all_6c.html  all_6d.html  all_6f.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_7e.html  classes_64.html  classes_69.html  classes_6c.html  classes_72.html  classes_74.html  classes_76.html  enums_73.html  enumvalues_61.html  enumvalues_72.html  functions_61.html  functions_63.html  functions_64.html  functions_66.html  functions_67.html  functions_68.html  functions_69.html  functions_6c.html  functions_6f.html  functions_70.html  functions_72.html  functions_73.html  functions_74.html  search.js  variables_64.html  variables_66.html  variables_6f.html  variables_74.html  (+1 more)
src/: DefaultLocalizer.cpp  LazyLocalizer.cpp  LinkedCameraDebugger.cpp  LinkedCameraImplementation.cpp  LinkedObject.cpp  Registration.cpp  Tool.cpp  ToolByPort.cpp
src/doc/: Doxyfile.in  api01.uml  doc.dox  doc_00style.css  install.bat
src/include/: DefaultLocalizerDetails.h  LinkedCameraImplementationDetails.h  glew.h
test/: CMakeLists.txt
test/ModuleTests/: BuildTest.cpp  BuildTest.h  configure.cmake
test/Tools/: LocalizerMock.cpp  LocalizerMock.h  SceneMockFactory.cpp  SceneMockFactory.h  TestSuite.h
test/UnitTests/: configure.cmake
test/res/: Transformation.ini  XRayEmpty.cof  XRayEmpty.trf
